2006-02-26 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/environment/Sun.cpp: disable the sun particle effect for now
    * src/components/ogre/SceneManagers/EmberPagingSceneManager/src/EmberPagingLandScapeData2D_HeightField.cpp: make sure that the max height is never 0
    * src/components/ogre/EmberEntity.cpp, src/components/ogre/EmberPhysicalEntity.cpp: fixed the parsing of the name of the action
    * src/components/ogre/EmberOgre.cpp: don't try to clean up since it will apparently only result in tears and segfaults, instead let the application clean up itself
    * src/components/ogre/terrain.cfg: increase the number of shown renderables
    
2006-02-25 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/EmberOgre.cpp: fixed a problem where the loading bar didn't really show the correct progress
    * src/components/ogre/EmberPhysicalEntity.cpp: make sure nonrunning animations are not active

2006-02-25 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/TerrainPage.cpp, src/components/ogre/TerrainShader.cpp, src/components/ogre/TerrainShader.h:
        * added more debug output and more comments
        * changed the scaling a bit, though it's still only an interim solution
        * fiddled a bit with more efficient techniques, though they are not activated yet

2006-02-25 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/widgets/ServerWidget.cpp, src/components/ogre/widgets/ServerWidget.h, src/components/ogre/widgets/ServerWidget.xml: show server information

2006-02-25 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/widgets/Help.cpp: fixed a problem where the blurb might be displayed twice and thus crash

2006-02-24 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/EmberOgre.*: cleaned up binreloc loading

2006-02-23 Erik Hjortsberg  <erik@katastrof.nu>

    * src/services/config/ConfigService.cpp: added some more logging