@@ -1,3 +1,7 @@
+2006-02-27 Erik Hjortsberg  <erik@katastrof.nu>
+
+    * src/components/WidgetInfo.h: removed obsolete file
+
 2006-02-26 Erik Hjortsberg  <erik@katastrof.nu>
 
     * src/components/ogre/environment/Sun.cpp: disable the sun particle effect for now
